k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
       app: fastapi-application
       #app: myapp
  template:
    metadata:
      labels:
         app: fastapi-application
         #app: myapp
    spec:
      containers:
      - name: fastapi-container
        image: us-east1-docker.pkg.dev/winter-clone-429310-f7/web/auth-service-image:latest
        #image: hayko2508/auth-image:latest
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: gcp-key
            mountPath: /var/secrets/google
            readOnly: true
      volumes:
        - name: gcp-key
          secret:
            secretName: gcp-service-account-key
