k8s/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-application
  template:
    metadata:
      labels:
        app: django-application
    spec:
      containers:
      - name: django-container
        image: us-east1-docker.pkg.dev/winter-clone-429310-f7/web/web-server-image:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: gcp-key
          mountPath: /var/secrets/google
          readOnly: true
      volumes:
      - name: gcp-key
        secret:
          secretName: gcp-service-account-key
