k8s/django-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: django-service
    name: django-service
  spec:
    type: ClusterIP
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8000
    selector:
      app: django-application
