k8s/fastapi-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: fastapi-service
    name: fastapi-service
  spec:
    type: ClusterIP
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8000
    selector:
      app: fastapi-application
