k8s/loadBalancerService.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-django-app
    labels:
      app: django-application
spec:
  selector:
    app: django-application
  type: LoadBalancer
  ports:
  - nodePort: 31000
    port: 80
    targetPort: 8000
