k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8080
